@@ -181,20 +181,6 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|HBaseConfiguration
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
 name|HColumnDescriptor
 import|;
 end_import
@@ -535,6 +521,19 @@ init|=
 literal|"testindex"
 decl_stmt|;
 specifier|private
+specifier|static
+specifier|final
+name|Text
+index|[]
+name|columns
+init|=
+block|{
+name|TEXT_INPUT_COLUMN
+block|,
+name|TEXT_OUTPUT_COLUMN
+block|}
+decl_stmt|;
+specifier|private
 name|HTableDescriptor
 name|desc
 decl_stmt|;
@@ -847,8 +846,6 @@ expr_stmt|;
 block|}
 name|scanTable
 argument_list|(
-name|conf
-argument_list|,
 name|printResults
 argument_list|)
 expr_stmt|;
@@ -1001,16 +998,12 @@ expr_stmt|;
 block|}
 name|scanTable
 argument_list|(
-name|conf
-argument_list|,
 name|printResults
 argument_list|)
 expr_stmt|;
 comment|// verify index results
 name|verify
-argument_list|(
-name|conf
-argument_list|)
+argument_list|()
 expr_stmt|;
 block|}
 specifier|private
@@ -1167,9 +1160,6 @@ specifier|private
 name|void
 name|scanTable
 parameter_list|(
-name|HBaseConfiguration
-name|c
-parameter_list|,
 name|boolean
 name|printResults
 parameter_list|)
@@ -1182,7 +1172,7 @@ init|=
 operator|new
 name|HTable
 argument_list|(
-name|c
+name|conf
 argument_list|,
 operator|new
 name|Text
@@ -1190,16 +1180,6 @@ argument_list|(
 name|TABLE_NAME
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|Text
-index|[]
-name|columns
-init|=
-block|{
-name|TEXT_INPUT_COLUMN
-block|,
-name|TEXT_OUTPUT_COLUMN
-block|}
 decl_stmt|;
 name|HScannerInterface
 name|scanner
@@ -1340,13 +1320,39 @@ block|}
 specifier|private
 name|void
 name|verify
-parameter_list|(
-name|HBaseConfiguration
-name|c
-parameter_list|)
+parameter_list|()
 throws|throws
 name|IOException
 block|{
+comment|// Sleep before we start the verify to ensure that when the scanner takes
+comment|// its snapshot, all the updates have made it into the cache.
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|conf
+operator|.
+name|getLong
+argument_list|(
+literal|"hbase.regionserver.optionalcacheflushinterval"
+argument_list|,
+literal|60L
+operator|*
+literal|1000L
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+comment|// ignore
+block|}
 name|Path
 name|localDir
 init|=
@@ -1541,7 +1547,7 @@ init|=
 operator|new
 name|HTable
 argument_list|(
-name|c
+name|conf
 argument_list|,
 operator|new
 name|Text
@@ -1549,16 +1555,6 @@ argument_list|(
 name|TABLE_NAME
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|Text
-index|[]
-name|columns
-init|=
-block|{
-name|TEXT_INPUT_COLUMN
-block|,
-name|TEXT_OUTPUT_COLUMN
-block|}
 decl_stmt|;
 name|scanner
 operator|=
@@ -1609,7 +1605,7 @@ decl_stmt|;
 name|String
 name|content
 init|=
-name|c
+name|conf
 operator|.
 name|get
 argument_list|(
