@@ -151,20 +151,6 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|HBaseConfiguration
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
 name|HColumnDescriptor
 import|;
 end_import
@@ -464,6 +450,19 @@ name|Text
 argument_list|(
 name|OUTPUT_COLUMN
 argument_list|)
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|Text
+index|[]
+name|columns
+init|=
+block|{
+name|TEXT_INPUT_COLUMN
+block|,
+name|TEXT_OUTPUT_COLUMN
+block|}
 decl_stmt|;
 specifier|private
 name|MiniDFSCluster
@@ -1208,8 +1207,6 @@ argument_list|)
 expr_stmt|;
 name|scanTable
 argument_list|(
-name|conf
-argument_list|,
 name|SINGLE_REGION_TABLE_NAME
 argument_list|,
 literal|true
@@ -1328,8 +1325,6 @@ argument_list|)
 expr_stmt|;
 name|scanTable
 argument_list|(
-name|conf
-argument_list|,
 name|SINGLE_REGION_TABLE_NAME
 argument_list|,
 literal|true
@@ -1338,8 +1333,6 @@ expr_stmt|;
 comment|// verify map-reduce results
 name|verify
 argument_list|(
-name|conf
-argument_list|,
 name|SINGLE_REGION_TABLE_NAME
 argument_list|)
 expr_stmt|;
@@ -1568,8 +1561,6 @@ block|}
 comment|// verify map-reduce results
 name|verify
 argument_list|(
-name|conf
-argument_list|,
 name|MULTI_REGION_TABLE_NAME
 argument_list|)
 expr_stmt|;
@@ -1587,9 +1578,6 @@ specifier|private
 name|void
 name|scanTable
 parameter_list|(
-name|HBaseConfiguration
-name|conf
-parameter_list|,
 name|String
 name|tableName
 parameter_list|,
@@ -1613,16 +1601,6 @@ argument_list|(
 name|tableName
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|Text
-index|[]
-name|columns
-init|=
-block|{
-name|TEXT_INPUT_COLUMN
-block|,
-name|TEXT_OUTPUT_COLUMN
-block|}
 decl_stmt|;
 name|HScannerInterface
 name|scanner
@@ -1763,15 +1741,41 @@ specifier|private
 name|void
 name|verify
 parameter_list|(
-name|HBaseConfiguration
-name|conf
-parameter_list|,
 name|String
 name|tableName
 parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|// Sleep before we start the verify to ensure that when the scanner takes
+comment|// its snapshot, all the updates have made it into the cache.
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|conf
+operator|.
+name|getLong
+argument_list|(
+literal|"hbase.regionserver.optionalcacheflushinterval"
+argument_list|,
+literal|60L
+operator|*
+literal|1000L
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+comment|// ignore
+block|}
 name|HTable
 name|table
 init|=
@@ -1786,16 +1790,6 @@ argument_list|(
 name|tableName
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|Text
-index|[]
-name|columns
-init|=
-block|{
-name|TEXT_INPUT_COLUMN
-block|,
-name|TEXT_OUTPUT_COLUMN
-block|}
 decl_stmt|;
 name|HScannerInterface
 name|scanner
