@@ -133,20 +133,6 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
-name|HBaseConfiguration
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
 name|HColumnDescriptor
 import|;
 end_import
@@ -570,10 +556,13 @@ name|dfsCluster
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * @throws Exception    */
 specifier|public
 name|void
 name|testTableJoinMapReduce
 parameter_list|()
+throws|throws
+name|Exception
 block|{
 name|HTable
 name|table
@@ -1278,7 +1267,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|IOException
+name|Exception
 name|e
 parameter_list|)
 block|{
@@ -1287,8 +1276,18 @@ operator|.
 name|printStackTrace
 argument_list|()
 expr_stmt|;
+throw|throw
+name|e
+throw|;
 block|}
 finally|finally
+block|{
+if|if
+condition|(
+name|mrCluster
+operator|!=
+literal|null
+condition|)
 block|{
 name|mrCluster
 operator|.
@@ -1296,19 +1295,18 @@ name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
+block|}
 try|try
 block|{
 name|verify
 argument_list|(
-name|conf
-argument_list|,
 name|OUTPUT_TABLE
 argument_list|)
 expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|IOException
+name|Exception
 name|e
 parameter_list|)
 block|{
@@ -1317,6 +1315,9 @@ operator|.
 name|printStackTrace
 argument_list|()
 expr_stmt|;
+throw|throw
+name|e
+throw|;
 block|}
 block|}
 comment|/**    * Check the result table lattice size.    *     * @param conf    * @param outputTable    * @throws IOException    */
@@ -1324,15 +1325,41 @@ specifier|private
 name|void
 name|verify
 parameter_list|(
-name|HBaseConfiguration
-name|conf
-parameter_list|,
 name|String
 name|outputTable
 parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|// Sleep before we start the verify to ensure that when the scanner takes
+comment|// its snapshot, all the updates have made it into the cache.
+try|try
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|conf
+operator|.
+name|getLong
+argument_list|(
+literal|"hbase.regionserver.optionalcacheflushinterval"
+argument_list|,
+literal|60L
+operator|*
+literal|1000L
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+comment|// ignore
+block|}
 name|HTable
 name|table
 init|=
@@ -1443,8 +1470,12 @@ name|results
 argument_list|)
 condition|)
 block|{
-name|assertTrue
+name|LOG
+operator|.
+name|info
 argument_list|(
+literal|"result_table.column.size: "
+operator|+
 name|results
 operator|.
 name|keySet
@@ -1452,16 +1483,12 @@ argument_list|()
 operator|.
 name|size
 argument_list|()
-operator|==
-literal|5
 argument_list|)
 expr_stmt|;
-name|LOG
-operator|.
-name|info
+name|assertEquals
 argument_list|(
-literal|"result_table.column.size: "
-operator|+
+literal|5
+argument_list|,
 name|results
 operator|.
 name|keySet
